# tato

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/tato/: _debug.py  _graph.py  _node.py  _node_type.py  _section.py  _skipcompare.py  cli.py  tato.py
src/tato/index/: _collector.py  _controller.py  _db.py  _definition.py  _filecache.py  _types.py  db-schema.sql  index.py
src/tato/index/__tests__/: test_db.py  test_definition.py  test_index.py
src/tato/index/__tests__/data/index/test1/: a.py  c.py
src/tato/indexer/: _collector.py  _db.py  _definition.py  _filecache.py  _types.py  db-schema.sql  indexer.py
src/tato/lib/: uuid.py
testlib/: codemod.py
tests/: conftest.py  test_tato.py
tests/indexer/: test_db.py  test_definition.py  test_indexer.py
tests/indexer/data/definition/test2/: a.py  b.py
tests/indexer/data/indexer/test1/: b.py
tests/large/animals/: after.py  before.py  test_animals.py
tests/large/filesystem/: after.py  before.py  test_filesystem.py
