[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tato"
dynamic = ["version"]
description = 'Autoformatted file layout using sections (imports, constants, classes, functions).'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["autoformat", "format", "layout", "sections"]
authors = [
  { name = "Vivek Dasari", email = "vivster7@gmail.com" },
]
classifiers = [
  "Development Status :: 3  - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "libcst>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/vivster7/tato#readme"
Issues = "https://github.com/vivster7/tato/issues"
Source = "https://github.com/vivster7/tato"

[project.scripts]
tato = "tato.cli:main"


[tool.hatch.version]
path = "src/tato/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tato tests}"

[tool.coverage.run]
source_pkgs = ["tato", "tests"]
branch = true
parallel = true
omit = [
  "src/tato/__about__.py",
]

[tool.coverage.paths]
tato = ["src/tato", "*/tato/src/tato"]
tests = ["tests", "*/tato/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
